[package]
name = "pandora-api"
version = "0.4.0"
edition = "2018"
authors = ["Will Page <compenguy@gmail.com>"]
license = "MIT AND WTFPL"
repository = "https://github.com/compenguy/pandora-api.git"
description = "Low-level bindings to the (unofficial) Pandora web api."

[dependencies]
thiserror = "1.0"
url = "2.2"
surf = { version = "2", default-features = false, features = ["hyper-client"] }
async-trait = "0.1"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
pandora-api-derive = "0.1"

[dev-dependencies]
async-std = { version = "1.0", default-features = false, features = ["attributes"] }
