[package]
name = "pandora-api"
version = "0.6.0"
edition = "2018"
authors = ["Will Page <compenguy@gmail.com>"]
license = "MIT AND WTFPL"
repository = "https://github.com/compenguy/pandora-api.git"
description = "Low-level bindings to the (unofficial) Pandora web api."

[dependencies]
thiserror = "1.0"
log = "0.4"
url = "2.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
pandora-api-derive = { version = "0.1.1", path = "../pandora-api-derive" }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
flexi_logger = { version = "0.25", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }

