[package]
name = "pandora-api"
version = "0.6.2"
edition = "2021"
authors = ["Will Page <compenguy@gmail.com>"]
license = "MIT AND WTFPL"
repository = "https://github.com/compenguy/pandora-api.git"
description = "Low-level bindings to the (unofficial) Pandora web api."

[dependencies]
thiserror = "1.0"
log = "0.4"
url = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
blowfish = "0.9"
cipher = { version = "0.4", features = ["block-padding"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
pandora-api-derive = { version = "0.1.3", path = "../pandora-api-derive" }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
flexi_logger = { version = "0.25", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }

